2006-12-19  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-parse-buffer): Use `sleep-for' instead of `sit-for'.

2006-12-18  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-friend-nick-regexp): Follow the change of mixi.
	(mixi-friend-name-regexp): Ditto.
	(mixi-friend-sex-regexp): Ditto.
	(mixi-friend-hobby-regexp): Ditto.
	(mixi-friend-realize): Follow the change above.
	(mixi-community-birthday-regexp): Follow the change of mixi.
	(mixi-community-owner-regexp): Ditto.
	(mixi-community-category-regexp): Ditto.
	(mixi-community-members-regexp): Ditto.
	(mixi-community-open-level-regexp): Ditto.
	(mixi-community-authority-regexp): Ditto.

2006-12-18  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-mixi-make-subject): Add SHIMBUN argument.
	(shimbun-mixi-get-headers): Follow the change above.

	* mixi.el (mixi-topic-community-regexp): New regexp.
	(mixi-topic-realize): Use it.
	(mixi-event-community-regexp): New regexp.
	(mixi-event-realize): Use it.
	(mixi-bbs-list): New constant.
	(mixi-bbs-p): New macro.
	(mixi-bbs-community): New function.

2006-12-18  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-curl-cookie-file): Change the default value to
	~/.mixi/cookies.txt.

2006-12-14  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-object-title): Remove application dependant codes.
	(mixi-object-content): Ditto.

	* sb-mixi.el (shimbun-mixi-make-subject): Follow the change above.
	(shimbun-mixi-make-body): Ditto.

2006-12-14  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-friend-nick-regexp): Follow the change of mixi.
	(mixi-friend-realize): Ditto.

2006-12-14  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-object-p): Check whether class is symbol.
	(mixi-read-object): New function.
	(mixi-cache-file-regexp): New regexp.
	(mixi-cache-regexp): Use it.
	(mixi-save-cache): Remove the prefix of file name.
	(mixi-read-cache): Use `mixi-read-object' instead of `puthash'.
	(mixi-load-cache): Follow the change above.